Keep image ratio, add style on the footnotes, fix page-break-after, fix many other bugs

--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration enum.cs" />
+    <Compile Include="HtmlConverter.ProcessTag.cs" />
     <Compile Include="ProvisionImageEventArgs.cs" />
     <Compile Include="HtmlAttributeCollection.cs" />
     <Compile Include="StyleCollection\ParagraphStyleCollection.cs" />
