--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -35,6 +35,10 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,7 +48,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -66,31 +70,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\OpenXmlDocumentStyleCollection.cs" />
     <Compile Include="Configuration enum.cs" />
     <Compile Include="HtmlConverter.ProcessTag.cs" />
+    <Compile Include="Primitives\HtmlImageInfo.cs" />
     <Compile Include="ProvisionImageEventArgs.cs" />
-    <Compile Include="HtmlAttributeCollection.cs" />
-    <Compile Include="StyleCollection\NumberingListStyleCollection.cs" />
-    <Compile Include="StyleCollection\ParagraphStyleCollection.cs" />
-    <Compile Include="StyleCollection\TableContext.cs" />
-    <Compile Include="StyleCollection\TableStyleCollection.cs" />
+    <Compile Include="Collections\HtmlAttributeCollection.cs" />
+    <Compile Include="Collections\NumberingListStyleCollection.cs" />
+    <Compile Include="Collections\ParagraphStyleCollection.cs" />
+    <Compile Include="Collections\TableContext.cs" />
+    <Compile Include="Collections\TableStyleCollection.cs" />
     <Compile Include="HtmlDocumentStyle.cs" />
     <Compile Include="HtmlConverter.cs" />
     <Compile Include="HtmlEnumerator.cs" />
-    <Compile Include="StyleCollection\OpenXmlStyleCollection.cs" />
+    <Compile Include="Collections\OpenXmlStyleCollection.cs" />
     <Compile Include="StyleEventArgs.cs" />
-    <Compile Include="Utilities\SideBorder.cs" />
-    <Compile Include="Utilities\UnitMetric.cs" />
-    <Compile Include="Utilities\HtmlBorder.cs" />
-    <Compile Include="Utilities\Margin.cs" />
+    <Compile Include="Utilities\ImageDownloader.cs" />
+    <Compile Include="Primitives\SideBorder.cs" />
+    <Compile Include="Primitives\UnitMetric.cs" />
+    <Compile Include="Primitives\HtmlBorder.cs" />
+    <Compile Include="Primitives\Margin.cs" />
     <Compile Include="Utilities\HttpUtility.cs" />
     <Compile Include="OpenXmlExtension.cs" />
     <Compile Include="Utilities\ConverterUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StyleCollection\RunStyleCollection.cs" />
+    <Compile Include="Collections\RunStyleCollection.cs" />
     <Compile Include="Utilities\ImageHeader.cs" />
-    <Compile Include="Utilities\Unit.cs" />
-    <Compile Include="Utilities\WebProxy.cs" />
+    <Compile Include="Primitives\Unit.cs" />
+    <Compile Include="WebProxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HtmlToOpenXml.snk" />
