<img> can read the inline image (base64). Add margin support for container (<div>, <p>, etc...). Fix nested tables when no text are in the cell. <img> alt is either alt or title html attribute.

--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Collections\OpenXmlDocumentStyleCollection.cs" />
     <Compile Include="Configuration enum.cs" />
     <Compile Include="HtmlConverter.ProcessTag.cs" />
+    <Compile Include="Primitives\DataUri.cs" />
     <Compile Include="Primitives\FontStyle.cs" />
     <Compile Include="Primitives\FontVariant.cs" />
     <Compile Include="Primitives\FontWeight.cs" />
