--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NotesFor.HtmlToOpenXml</RootNamespace>
     <AssemblyName>HtmlToOpenXml</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
@@ -39,7 +39,6 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -61,7 +60,7 @@
     <DocumentationFile>bin\Release\HtmlToOpenXml.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DocumentFormat.OpenXml" />
+    <Reference Include="DocumentFormat.OpenXml, Version=2.0.5022.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -89,7 +88,7 @@
     <Compile Include="HtmlDocumentStyle.cs" />
     <Compile Include="HtmlConverter.cs" />
     <Compile Include="HtmlEnumerator.cs" />
-    <Compile Include="Collections\OpenXmlStyleCollection.cs" />
+    <Compile Include="Collections\OpenXmlStyleCollectionBase.cs" />
     <Compile Include="StyleEventArgs.cs" />
     <Compile Include="Utilities\ImageDownloader.cs" />
     <Compile Include="Primitives\SideBorder.cs" />
