--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -79,6 +79,11 @@
     <Compile Include="Primitives\FontWeight.cs" />
     <Compile Include="Primitives\HtmlFont.cs" />
     <Compile Include="Primitives\HtmlImageInfo.cs" />
+    <Compile Include="Properties\PredefinedStyles.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PredefinedStyles.resx</DependentUpon>
+    </Compile>
     <Compile Include="ProvisionImageEventArgs.cs" />
     <Compile Include="Collections\HtmlAttributeCollection.cs" />
     <Compile Include="Collections\NumberingListStyleCollection.cs" />
@@ -123,6 +128,13 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\PredefinedStyles.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PredefinedStyles.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>NotesFor.HtmlToOpenXml</CustomToolNamespace>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
