Fix large image in binary 64 bits not rendered (bug #12948). Provide a logger for better debugging (feature #12947). Heading now support inline style (feature #12949). Fix <hr> not rendered if previous paragraph doesn't contain any children. Hyperlinks handle web site starting directly with www instead of http://. Hyperlink can now have image+text (style is applied). Internal refactoring.

--- a/HtmlToOpenXml.2.5.csproj
+++ b/HtmlToOpenXml.2.5.csproj
@@ -79,12 +79,13 @@
     <Compile Include="HtmlEnumerator.cs" />
     <Compile Include="Collections\OpenXmlStyleCollectionBase.cs" />
     <Compile Include="StyleEventArgs.cs" />
-    <Compile Include="Utilities\ImageDownloader.cs" />
     <Compile Include="Primitives\SideBorder.cs" />
     <Compile Include="Primitives\UnitMetric.cs" />
     <Compile Include="Primitives\HtmlBorder.cs" />
     <Compile Include="Primitives\Margin.cs" />
     <Compile Include="Utilities\HttpUtility.cs" />
+    <Compile Include="Utilities\ImageProvisioningProvider.cs" />
+    <Compile Include="Utilities\Logging.cs" />
     <Compile Include="Utilities\OpenXmlExtension.cs" />
     <Compile Include="Utilities\ConverterUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
