--- a/HtmlToOpenXml.csproj
+++ b/HtmlToOpenXml.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -75,12 +75,15 @@
     <Compile Include="HtmlEnumerator.cs" />
     <Compile Include="Collections\OpenXmlStyleCollectionBase.cs" />
     <Compile Include="StyleEventArgs.cs" />
-    <Compile Include="Utilities\ImageDownloader.cs" />
+    <Compile Include="Utilities\ImageProvisioningProvider.cs" />
     <Compile Include="Primitives\SideBorder.cs" />
     <Compile Include="Primitives\UnitMetric.cs" />
     <Compile Include="Primitives\HtmlBorder.cs" />
     <Compile Include="Primitives\Margin.cs" />
     <Compile Include="Utilities\HttpUtility.cs" />
+    <Compile Include="Utilities\Logging.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Utilities\OpenXmlExtension.cs" />
     <Compile Include="Utilities\ConverterUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
