Introduce a new method to start the conversion: ParseHtml which append automatically paragraphs. Old method still exists Expose cookies and request headers when downloading images (feature #13033). Fix rendering <pre> when RenderPreAsTable=false (bug #13127). Fix page-break-after crashing the conversion. Add support for landscape orientation (page-orientation on <body>). Fix <hr> rendering when 2 paragraphs were consecutive (top border is now applied, instead of bottom border, which looks smoother). Fix table shading (bug #13212) Merge pull request claiming a makefile for mono (#16898 by reeteshranjan) Merge pull request for adding left & right margin support to paragraph (apply also to <div> and <pre>) (#16943 by eto) Many changes to pass validation against FxCop for a better code.

--- a/HtmlToOpenXml.4.csproj
+++ b/HtmlToOpenXml.4.csproj
@@ -25,7 +25,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin.2.5\Debug\</OutputPath>
+    <OutputPath>bin\Debug\net40\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -34,7 +34,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin.2.5\Release\</OutputPath>
+    <OutputPath>bin\Release\net40\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -92,6 +92,9 @@
     <Compile Include="Collections\RunStyleCollection.cs" />
     <Compile Include="Utilities\ImageHeader.cs" />
     <Compile Include="Primitives\Unit.cs" />
+    <Compile Include="Utilities\WebClientEx.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WebProxy.cs" />
   </ItemGroup>
   <ItemGroup>
