--- a/src/Html2OpenXml/HtmlToOpenXml.csproj
+++ b/src/Html2OpenXml/HtmlToOpenXml.csproj
@@ -1,126 +1,80 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EF700F30-C9BB-49A6-912C-E3B77857B514}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NotesFor.HtmlToOpenXml</RootNamespace>
+    <TargetFrameworks>net35;net40;net46;netstandard1.4</TargetFrameworks>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyName>HtmlToOpenXml</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <RootNamespace>HtmlToOpenXml</RootNamespace>
+    <PackageIconUrl>https://github.com/onizet/html2openxml/raw/dev/docs/images/Home_h2oxnuget.png</PackageIconUrl>
+    <Copyright>Copyright 2009-2017</Copyright>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <PackageTags>office openxml netcore html</PackageTags>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <PackageLicenseUrl>https://github.com/onizet/html2openxml/blob/master/License.txt</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/onizet/html2openxml</PackageProjectUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <Description>A library to convert simple or advanced html to plain OpenXml document</Description>
+    <Version>2.0.0</Version>
+    <PackageId>HtmlToOpenXml</PackageId>
+    <Authors>Olivier Nizet</Authors>
+    <Company />
+    <Product />
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>HtmlToOpenXml.snk</AssemblyOriginatorKeyFile>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <SccProjectName>%24/notesforhtml2openxml/Trunk</SccProjectName>
-    <SccLocalPath>.</SccLocalPath>
-    <SccAuxPath>https://tfs.codeplex.com/tfs/tfs08</SccAuxPath>
-    <SccProvider>{4CA58AB2-18FA-4F8D-95D4-32DDF27D184C}</SccProvider>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\net20\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\net20\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\HtmlToOpenXml.XML</DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="DocumentFormat.OpenXml, Version=2.7.2.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
-      <HintPath>..\packages\DocumentFormat.OpenXml.2.7.2\lib\net35\DocumentFormat.OpenXml.dll</HintPath>
-    </Reference>
+
+  <!--
+    Since this project supports multiple configurations which don't all have the same surface area, the following define
+    constants are used to conditionally compile features:
+    FEATURE_DRAWING                  : System.Drawing is available in the platform
+    FEATURE_NETHTTP                  : System.Net.WebClient is available in the platform
+    FEATURE_REFLECTION               : System.Reflections is using Pre .NetCore API
+  -->
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net35' OR '$(TargetFramework)' == 'net40' OR '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
+
+  <!-- .NET Framework < 4.6 -->
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net35' OR '$(TargetFramework)' == 'net40' ">
+    <DefineConstants>$(DefineConstants);FEATURE_DRAWING;FEATURE_NETHTTP;FEATURE_REFLECTION</DefineConstants>
+  </PropertyGroup>
+  <!-- .NET Framework 4.6 -->
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <DefineConstants>$(DefineConstants);FEATURE_DRAWING;FEATURE_REFLECTION</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.4' ">
+    <DefineConstants>$(DefineConstants);NET_CORE</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.4' ">
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+  </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Collections\HtmlTableSpanCollection.cs" />
-    <Compile Include="Collections\OpenXmlDocumentStyleCollection.cs" />
-    <Compile Include="Configuration enum.cs" />
-    <Compile Include="HtmlConverter.ProcessTag.cs" />
-    <Compile Include="Primitives\DataUri.cs" />
-    <Compile Include="Primitives\FontStyle.cs" />
-    <Compile Include="Primitives\FontVariant.cs" />
-    <Compile Include="Primitives\FontWeight.cs" />
-    <Compile Include="Primitives\HtmlFont.cs" />
-    <Compile Include="Primitives\HtmlImageInfo.cs" />
-    <Compile Include="Primitives\HtmlTableSpan.cs" />
-    <Compile Include="Properties\FxCopRules.cs" />
-    <Compile Include="Properties\PredefinedStyles.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>PredefinedStyles.resx</DependentUpon>
-    </Compile>
-    <Compile Include="ProvisionImageEventArgs.cs" />
-    <Compile Include="Collections\HtmlAttributeCollection.cs" />
-    <Compile Include="Collections\NumberingListStyleCollection.cs" />
-    <Compile Include="Collections\ParagraphStyleCollection.cs" />
-    <Compile Include="Collections\TableContext.cs" />
-    <Compile Include="Collections\TableStyleCollection.cs" />
-    <Compile Include="HtmlDocumentStyle.cs" />
-    <Compile Include="HtmlConverter.cs" />
-    <Compile Include="HtmlEnumerator.cs" />
-    <Compile Include="Collections\OpenXmlStyleCollectionBase.cs" />
-    <Compile Include="StyleEventArgs.cs" />
-    <Compile Include="Utilities\WebClientEx.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Utilities\ImageProvisioningProvider.cs" />
-    <Compile Include="Primitives\SideBorder.cs" />
-    <Compile Include="Primitives\UnitMetric.cs" />
-    <Compile Include="Primitives\HtmlBorder.cs" />
-    <Compile Include="Primitives\Margin.cs" />
-    <Compile Include="Utilities\HttpUtility.cs" />
-    <Compile Include="Utilities\Logging.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Utilities\OpenXmlExtension.cs" />
-    <Compile Include="Utilities\ConverterUtility.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Collections\RunStyleCollection.cs" />
-    <Compile Include="Utilities\ImageHeader.cs" />
-    <Compile Include="Primitives\Unit.cs" />
-    <Compile Include="WebProxy.cs" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.7.2" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="HtmlToOpenXml.snk" />
-    <None Include="packages.config" />
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\PredefinedStyles.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>PredefinedStyles.Designer.cs</LastGenOutput>
-      <CustomToolNamespace>NotesFor.HtmlToOpenXml</CustomToolNamespace>
-    </EmbeddedResource>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.4'">
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Diagnostics.TraceSource">
+      <Version>4.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="System.Drawing.Primitives">
+      <Version>4.3.0</Version>
+    </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="..\License.txt">
-      <Link>License.txt</Link>
-    </Content>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>-->
+
 </Project>
