--- a/examples/Demo/packages.config
+++ b/examples/Demo/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net35" />
 </packages>
