--- a/src/Html2OpenXml/HtmlToOpenXml.csproj
+++ b/src/Html2OpenXml/HtmlToOpenXml.csproj
@@ -27,7 +27,6 @@
   <!--
     Since this project supports multiple configurations which don't all have the same surface area, the following define
     constants are used to conditionally compile features:
-    FEATURE_DRAWING                  : System.Drawing is available in the platform
     FEATURE_NETHTTP                  : System.Net.WebClient is available in the platform
     FEATURE_REFLECTION               : System.Reflections is using Pre .NetCore API
   -->
@@ -35,16 +34,15 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' OR '$(TargetFramework)' == 'net40' OR '$(TargetFramework)' == 'net46' ">
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
   </ItemGroup>
 
   <!-- .NET Framework < 4.6 -->
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net35' OR '$(TargetFramework)' == 'net40' ">
-    <DefineConstants>$(DefineConstants);FEATURE_DRAWING;FEATURE_NETHTTP;FEATURE_REFLECTION</DefineConstants>
+    <DefineConstants>$(DefineConstants);FEATURE_NETHTTP;FEATURE_REFLECTION</DefineConstants>
   </PropertyGroup>
   <!-- .NET Framework 4.6 -->
   <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
-    <DefineConstants>$(DefineConstants);FEATURE_DRAWING;FEATURE_REFLECTION</DefineConstants>
+    <DefineConstants>$(DefineConstants);FEATURE_REFLECTION</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.4' ">
     <DefineConstants>$(DefineConstants);NET_CORE</DefineConstants>
@@ -69,9 +67,6 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.TraceSource">
-      <Version>4.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="System.Drawing.Primitives">
       <Version>4.3.0</Version>
     </PackageReference>
   </ItemGroup>
