Use only netcore for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,9 @@
 language: csharp
 solution: HtmlToOpenXml.sln
-matrix:
-  include:
-    - dotnet: 2.1.502
-      mono: none
-      env: DOTNETCORE=2  # optional, can be used to take different code paths in your script
-    - mono: latest
+dotnet: 2.1.502
+mono: none
 install:
-  - nuget restore HtmlToOpenXml.sln
-  - nuget install NUnit.Console -Version 3.9.0 -OutputDirectory testrunner
+  - dotnet restore HtmlToOpenXml.sln
 script:
-  - msbuild /p:Configuration=Release HtmlToOpenXml.sln
-  - mono ./testrunner/NUnit.ConsoleRunner.3.9.0/tools/nunit3-console.exe ./test/HtmlToOpenXml.Tests/bin/Release/
+  - dotnet build /p:Configuration=Release HtmlToOpenXml.sln
+  - dotnet test ./test/HtmlToOpenXml.Tests/HtmlToOpenXml.Tests.csproj
