--- a/src/Html2OpenXml/HtmlToOpenXml.csproj
+++ b/src/Html2OpenXml/HtmlToOpenXml.csproj
@@ -11,7 +11,7 @@
     <Version>2.3.0</Version>
     <PackageIcon>icon.png</PackageIcon>
     <Copyright>Copyright 2009-$([System.DateTime]::Now.Year) Olivier Nizet</Copyright>
-    <PackageReleaseNotes>Support latest OpenXml release</PackageReleaseNotes>
+    <PackageReleaseNotes>See changelog https://github.com/onizet/html2openxml/blob/master/CHANGELOG.md</PackageReleaseNotes>
     <PackageTags>office openxml netcore html</PackageTags>
     <AssemblyVersion>2.3.0.0</AssemblyVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
