Use another gitattributes config to avoid wrong change detection

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,27 +1,22 @@
+# Auto detect text files and perform LF normalization
 * text=auto
 
-*.docx  diff=astextplain
+# Custom for Visual Studio
+*.cs     diff=csharp
+*.sln    merge=union
+*.csproj merge=union
+*.vbproj merge=union
+*.fsproj merge=union
+*.dbproj merge=union
 
-*.jpg binary
-*.png binary
-*.gif binary
-
-*.cs      text diff=csharp
-*.xml     text
-*.xsd     text
-*.xaml    text
-*.csproj  text
-*.resx    text
-*.sln     text
-*.tt      text
-*.ps1     text
-*.cmd     text
-*.msbuild text
-*.md      text
-*.txt     text
-*.html -text
-*.htm -text
-*.css -text
-
-*.csproj -text merge=union
-*.sln -text merge=union
+# Standard to msysgit
+*.doc	 diff=astextplain
+*.DOC	 diff=astextplain
+*.docx diff=astextplain
+*.DOCX diff=astextplain
+*.dot  diff=astextplain
+*.DOT  diff=astextplain
+*.pdf  diff=astextplain
+*.PDF	 diff=astextplain
+*.rtf	 diff=astextplain
+*.RTF	 diff=astextplain
