--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,8 +10,7 @@ on:
     branches: [ "dev" ]
 
 jobs:
-  build:
-
+  netcore:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -25,7 +24,19 @@ jobs:
           dotnet-version: ${{ matrix.dotnet-version }}
       - name: Restore dependencies
         run: dotnet restore
-      - name: dotnet build
+      - name: Build
         run: dotnet build --configuration Release --no-restore
-      - name: dotnet test
-        run: dotnet test --configuration Release--no-build --verbosity normal
+      - name: Run tests
+        run: dotnet test --configuration Release --no-build --verbosity normal
+
+  netframework:
+    runs-on: windows-latest
+    steps:
+      - name: Setup .NET Framework 4.6.2
+        uses: actions/setup-dotnet@v2
+        with:
+           dotnet-version: 4.6.2
+      - name: Build
+        run: msbuild HtmlToOpenXml.sln /p:Configuration=Release
+      - name: Run tests (NET Framework)
+        run: vstest.console.exe HtmlToOpenXml.Tests.dll
