Exclude some files/folders from triggering the pipeline

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -6,6 +6,9 @@ name: 'dotnet.yml'
 on:
   push:
     branches: [ "dev" ]
+    paths-ignore:
+      - 'docs/**'
+      - '**/*.md'
   pull_request:
     branches: [ "dev" ]
 
